force-app/main/default/objects/Platform_Content_dywtbas__c/Platform_Content_dywtbas__c.object-meta.xml
<CustomObject>
    <description>A place for Platform PMM Content</description>
    <label>Platform Content</label>
    <nameField>
        <label>Platform Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platform Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>