force-app/main/default/objects/Platform_Content_dywtbas__c/fields/Asset_Status_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>Asset_Status_dywtbas__c</fullName>
    <label>Asset Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>