force-app/main/default/objects/Platform_Content_dywtbas__c/fields/BASHO_Link_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>BASHO_Link_dywtbas__c</fullName>
    <label>BASHO Link</label>
    <type>Url</type>
</CustomField>