force-app/main/default/objects/Platform_Content_dywtbas__c/fields/Branding__c.field-meta.xml
<CustomField>
    <fullName>Branding__c</fullName>
    <description>Which brand is this asset using?</description>
    <inlineHelpText>We&#39;ve had a few rebrands...App Cloud, Salesforce Platform, Lightning Platform, Salesforce1 Platform...</inlineHelpText>
    <label>Branding</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>App Cloud</fullName>
            </value>
            <value>
                <fullName>Salesforce Platform</fullName>
            </value>
            <value>
                <fullName>Lightning Platform</fullName>
            </value>
            <value>
                <fullName>Salesforce1 Platform</fullName>
            </value>
            <value>
                <fullName>Salesforce1 Lightning</fullName>
            </value>
            <value>
                <fullName>Force.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>