force-app/main/default/objects/Platform_Content_dywtbas__c/fields/Chatter_Post_Link_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Post_Link_dywtbas__c</fullName>
    <label>Chatter Post Link</label>
    <type>Url</type>
</CustomField>