force-app/main/default/objects/Platform_Content_dywtbas__c/fields/Contains_Customer_Story_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>Contains_Customer_Story_dywtbas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select if this asset contains a customer</description>
    <inlineHelpText>Does this asset involve a customer company or Trailblazer?</inlineHelpText>
    <label>Contains Customer Story</label>
    <type>Checkbox</type>
</CustomField>