force-app/main/default/objects/Platform_Content_dywtbas__c/fields/Content_Type_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>Content_Type_dywtbas__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Article</fullName>
            </value>
            <value>
                <fullName>Datasheet</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>ebook</fullName>
            </value>
            <value>
                <fullName>First Call Deck</fullName>
            </value>
            <value>
                <fullName>Interactive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Whitepaper</fullName>
            </value>
            <value>
                <fullName>Free Trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>