force-app/main/default/objects/Platform_Content_dywtbas__c/fields/Date_of_Asset_Creation_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Asset_Creation_dywtbas__c</fullName>
    <label>Date of Asset Creation</label>
    <type>Date</type>
</CustomField>