force-app/main/default/objects/Platform_Content_dywtbas__c/fields/Funnel_Stage_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Stage_dywtbas__c</fullName>
    <label>Funnel Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TOFU</fullName>
            </value>
            <value>
                <fullName>MOFU</fullName>
            </value>
            <value>
                <fullName>BOFU</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>