force-app/main/default/objects/Platform_Content_dywtbas__c/fields/Gated_Link_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>Gated_Link_dywtbas__c</fullName>
    <label>Gated Link</label>
    <required>true</required>
    <type>Url</type>
</CustomField>