force-app/main/default/objects/Platform_Content_dywtbas__c/fields/Industry_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>Industry_dywtbas__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FINS</fullName>
            </value>
            <value>
                <fullName>HLS</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>