force-app/main/default/objects/Platform_Content_dywtbas__c/fields/Last_Updated_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_dywtbas__c</fullName>
    <description>Date the asset was most recently updated (content, branding, etc.)</description>
    <label>Last Updated</label>
    <type>Date</type>
</CustomField>