force-app/main/default/objects/Platform_Content_dywtbas__c/fields/LoB_Target_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>LoB_Target_dywtbas__c</fullName>
    <description>Which line of business does this target?</description>
    <label>LoB Target</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Persona_Target_dywtbas__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>