force-app/main/default/objects/Platform_Content_dywtbas__c/fields/Persona_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>Persona_dywtbas__c</fullName>
    <label>Persona</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CxO</fullName>
            </value>
            <value>
                <fullName>Manager+</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Dev</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>