force-app/main/default/objects/Platform_Content_dywtbas__c/fields/Persona_Target_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>Persona_Target_dywtbas__c</fullName>
    <description>Does this asset target primarily IT or line of business?</description>
    <inlineHelpText>Select the one that is most applicable, there may be some assets that are on the fence.</inlineHelpText>
    <label>Target Audience</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>