force-app/main/default/objects/Platform_Content_dywtbas__c/fields/PMM_Notes_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>PMM_Notes_dywtbas__c</fullName>
    <description>A place for PMMs to add notes about this piece of content</description>
    <inlineHelpText>Enter your notes on this piece of content</inlineHelpText>
    <label>PMM Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>