force-app/main/default/objects/Platform_Content_dywtbas__c/fields/Printed_Version_Exists_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>Printed_Version_Exists_dywtbas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This asset has been printed in the past</description>
    <inlineHelpText>Check this box if the asset has been printed in the past.</inlineHelpText>
    <label>Printed Version Exists</label>
    <type>Checkbox</type>
</CustomField>