force-app/main/default/objects/Platform_Content_dywtbas__c/fields/Product_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>Product_dywtbas__c</fullName>
    <label>Product(s)</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Heroku</fullName>
            </value>
            <value>
                <fullName>Identity</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>IoT</fullName>
            </value>
            <value>
                <fullName>Lightning Platform</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Shield</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>