force-app/main/default/objects/Platform_Content_dywtbas__c/fields/Technical_Asset__c.field-meta.xml
<CustomField>
    <fullName>Technical_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this asset contain technical content, and is it for a technical audience?</description>
    <label>Technical Asset?</label>
    <type>Checkbox</type>
</CustomField>