force-app/main/default/objects/Platform_Content_dywtbas__c/fields/Theme_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>Theme_dywtbas__c</fullName>
    <description>What theme does this piece of content fall under?</description>
    <inlineHelpText>What theme does this piece of content fall under? Especially important for TOFU content that is not associated with a product</inlineHelpText>
    <label>Theme</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>App Dev</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>IoT</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>General IT</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Employee Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>