force-app/main/default/objects/Platform_Content_dywtbas__c/fields/Ungated_Asset_Link_dywtbas__c.field-meta.xml
<CustomField>
    <fullName>Ungated_Asset_Link_dywtbas__c</fullName>
    <label>Ungated Asset Link</label>
    <type>Url</type>
</CustomField>