force-app/main/default/objects/Platform_Content_dywtbas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Asset_Creation_dywtbas__c</columns>
    <columns>Product_dywtbas__c</columns>
    <columns>Persona_dywtbas__c</columns>
    <columns>Persona_Target_dywtbas__c</columns>
    <columns>Content_Type_dywtbas__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>