force-app/main/default/objects/Platform_Content_dywtbas__c/listViews/List_1.listView-meta.xml
<ListView>
    <fullName>List_1</fullName>
    <columns>NAME</columns>
    <columns>Asset_Status_dywtbas__c</columns>
    <columns>PMM_Notes_dywtbas__c</columns>
    <columns>Product_dywtbas__c</columns>
    <columns>Gated_Link_dywtbas__c</columns>
    <columns>Branding__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_of_Asset_Creation_dywtbas__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2018</value>
    </filters>
    <label>Jodi&#39;s Filters</label>
</ListView>